CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(netool)

set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src DIR_MAIN_SRCS)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/arp-tools DIR_ARP_SRCS)
add_executable(netool ${DIR_MAIN_SRCS} ${DIR_ARP_SRCS})
target_link_libraries(netool -lpthread)
